/*
 * $Id: ChangeLog,v 1.2355 2004/02/21 11:58:23 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-02-21 21:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/direct.c
    % Optimized out usage of hb_itemNew()

  * source/rtl/trim.c
    % Optimized by :
      * bypassing HB_IS_COMPLEX checking because parameter passed is always
        string type.
      * trim functions now completely using their own static function and
        directly utilizing members of PHB_ITEM. They should be faster now.

  * contrib/unicode/hbcc.prg
  * contrib/unicode/hbcu.c
  * contrib/unicode/hbcx.c
  * contrib/unicode/hbcy.c
    % Optimized out usage of hb_itemNew()

2004-02-21 09:00 UTC-0300 Luiz Rafael Culik <culikr@brturbo.com>
  * utils/hbmake/hbmake.prg
    ! set target name to make file name

2004-02-21 10:02 UTC+0100 Giancarlo Niccolai <gc [at] niccolai [dot] ws>
  * source/vm/errorapi.c
    * some "spaces" around

  * source/vm/hbi18n.c
    ! fixed memory leaks.

  * source/vm/hvm.c
    * Added some tracelogs in hb_vmQuit()

  * source/vm/memvars.c
    * Added tracelogs in MT functions

  * source/vm/thread.c
    * Added tracelogs in MT functions
    ! fixed some memory leaks in main thread's stack.

2004-02-20 22:13 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hash.c
    ! Fixed remaining memory leaks.

  * source/vm/hvm.c
    ! Fixed remaining memory leaks related to hash operations and pseudo methods of Hash objects.

  /* tests\has.prg and tests/hashmas.prg perform without any leak. :-) */

2004-02-20 21:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hash.c
    ! Fixed memory leak in HB_FUNC( HCLONE )

  * source/vm/hvm.c
    ! Fixed memory leak in :Keys() and :Values() pseudo methods of Hash objects.

2004-02-20 21:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hash.c